--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     <meta name="description" content="Página de ejemplo del MOOC de LINUX - UPM.">
     <!--Sustituir por los datos del alumno-->
-    <meta name="author" content="Nombre y Apellido(s)">
+    <meta name="author" content="Antonio Plaza Serón">
 
     <!--Sustituir por los datos del alumno-->
-    <title>Nombre y Apellido(s)</title>
+    <title>Antonio Plaza Serón</title>
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -17,7 +17,7 @@
   <body>
     <div class="container header-bar">
       <!--Sustituir por los datos del alumno-->
-      <h3>Nombre y Apellido(s) <span><img style="width: 214px; height: 164px;" class='img-circle' alt="Nombre y Apellido(s)" src="img/foto.png" align="right"></span></h3>
+      <h3>Antonio Plaza Serón <span><img style="width: 214px; height: 164px;" class='img-circle' alt="Nombre y Apellido(s)" src="img/foto.png" align="right"></span></h3>
       <p>
         <!--Sustituir por los datos del alumno-->
         Posición<br>
@@ -32,7 +32,7 @@
       <!--Sustituir por los datos del alumno-->
       <p><a href="http://twitter.com/usuario" target="blank"><img src="img/twitter-icon.jpg" width=25></a>
       <!--Sustituir por los datos del alumno-->
-      <a href="http://github.com/usuario" target="blank"><img src="img/github-icon.png" width=25></a>
+      <a href="http://github.com/anplase" target="blank"><img src="img/github-icon.png" width=25></a>
       <!--Sustituir por los datos del alumno-->
       <a href="https://es.linkedin.com/in/usuario" target="blank"><img src="img/linkedin-icon.png" width=25></a>
     </div>
@@ -41,7 +41,7 @@
       <div class='row'>
         <div class='col-sm-8'>
           <br>
-          <p>Este párrafo contiene una descripción breve del alumno. Se trata de un texto que permite conocer su ocupación actual y sus principales títulos académicos y/o profesionales.  </p>
+          <p>Mi nombre es Antonio Plaza y me dedico a la instrumentación en una empresa, soy ITI en eléctricidad.  </p>
           
           <p>En este segundo párrafo nos centraremos en las capacidades de desarrollo del alumno, de forma que se pueda conocer si sabe programar, en qué lenguajes, qué sistemas operativos conoce y domina, etc. También se pueden mencionar los proyectos que se han desarrollado en GitHub, o cualquier otra información que se considere relevante.</p>
 
