subo la ultima versión de la pagina para el ejercicio fin del curso

--- a/index.html
+++ b/index.html
@@ -17,24 +17,24 @@
   <body>
     <div class="container header-bar">
       <!--Sustituir por los datos del alumno-->
-      <h3>Antonio Plaza Serón <span><img style="width: 214px; height: 164px;" class='img-circle' alt="Nombre y Apellido(s)" src="img/foto.png" align="right"></span></h3>
+      <h3>Antonio Plaza Serón <span><img style="width: 214px; height: 164px;" class='img-circle' alt="Antonio Plaza Serón" src="img/Mario.jpeg" align="right"></span></h3>
       <p>
         <!--Sustituir por los datos del alumno-->
-        Posición<br>
-        Departamento<br>
-        Organización
+        Instrumentista<br>
+        Sistemas de control<br>
+        Mantenimiento
       </p>
       <address>
         <!--Sustituir por los datos del alumno-->
-        <span class='glyphicon glyphicon-pencil'></span> correo [at] dominio <br>
+        <span class='glyphicon glyphicon-pencil'></span> anplase2@hotmail.com <br>
       </address>
 
       <!--Sustituir por los datos del alumno-->
-      <p><a href="http://twitter.com/usuario" target="blank"><img src="img/twitter-icon.jpg" width=25></a>
+      <p><!--<a href="http://twitter.com/usuario" target="blank"><img src="img/twitter-icon.jpg" width=25></a>-->
       <!--Sustituir por los datos del alumno-->
       <a href="http://github.com/anplase" target="blank"><img src="img/github-icon.png" width=25></a>
       <!--Sustituir por los datos del alumno-->
-      <a href="https://es.linkedin.com/in/usuario" target="blank"><img src="img/linkedin-icon.png" width=25></a>
+      <!--<a href="https://es.linkedin.com/in/usuario" target="blank"><img src="img/linkedin-icon.png" width=25></a>-->
     </div>
 
     <div class="container">
@@ -43,19 +43,21 @@
           <br>
           <p>Mi nombre es Antonio Plaza y me dedico a la instrumentación en una empresa, soy ITI en eléctricidad.  </p>
           
-          <p>En este segundo párrafo nos centraremos en las capacidades de desarrollo del alumno, de forma que se pueda conocer si sabe programar, en qué lenguajes, qué sistemas operativos conoce y domina, etc. También se pueden mencionar los proyectos que se han desarrollado en GitHub, o cualquier otra información que se considere relevante.</p>
+          <p>Actualmente estoy realizando este curso para ir aprendiendo un poco sobre la shell de linux. He probado hacer el curso de html5 de aquí mismo miriadax, pero por motivos de trabajo y familia no lo he podido terminar y a la espera de empezar de nuevo cuando se realiza. Por lo demás he tocado un poco de C++, python, y tengo en mente de empezar con html5, css3, javaScript y java.</p>
 
           <h3>Cursos</h3>
           <table class='table table-striped'>
             <tr><td><a href="https://www.miriadax.net" target="blank">Introducción a Linux como entorno de desarrollo de sistemas software</a>.</td></tr>
+            <tr><td><a href="https://miriadax.net/web/html5mooc/inicio" target="blank">Desarrollo en HTML5, CSS, Javascript de Apps Web, Android, ...</a>.</td></tr>
             <tr><td>Otros...</td></tr>
           </table>
         </div>
       </div>
+      <p><span><img style="width: 114px; height: 94px;" alt="Antonio Plaza Serón" src="img/HomerSimpson.png" align="right"></span></p>
 
       <footer class="footer">
         <!--Sustituir por los datos del alumno-->
-        <p>&copy; Nombre y Apellido(s) - 2017</p>
+        <p>&copy; Antonio Plaza Serón - 2018</p>
       </footer>
 
     </div>
